force-app/main/default/objects/TimeSheetEntry__c/TimeSheetEntry__c.object-meta.xml
<CustomObject>
    <label>TimeSheetEntry</label>
    <nameField>
        <displayFormat>TSE-{00000}</displayFormat>
        <label>TimeSheetEntry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheetEntries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>