force-app/main/default/objects/TimeSheetEntry__c/fields/hours__c.field-meta.xml
<CustomField>
    <fullName>hours__c</fullName>
    <label>hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>